objects/OTP__c.object
<CustomObject>
    <fields>
        <fullName>ExpireTime__c</fullName>
        <formula>(DATETIMEVALUE(CreatedDate)+(1/24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExpireTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExpiredDateTime__c</fullName>
        <formula>GeneratedDateTime__c +(15/1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExpiredDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <formula>(DATETIMEVALUE(ExpireTime__c)) &lt; NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeneratedDateTime__c</fullName>
        <label>GeneratedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTP__c</fullName>
        <label>OTP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OTPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <formula>User__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <label>OTP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OTP__c</columns>
        <columns>Status__c</columns>
        <columns>Expired__c</columns>
        <columns>User__c</columns>
        <columns>Username__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>contains</operation>
            <value>Adilene</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OTP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OTPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>